--- a/giflib-api.cabal
+++ b/giflib-api.cabal
@@ -31,3 +31,11 @@ executable giflib-api
                        -auto-all
                        -caf-all
 
+Test-Suite hspec-tests
+  main-is:             Tests/Main.hs
+  type:                exitcode-stdio-1.0
+  default-language:    Haskell2010
+  build-depends:       base >=4.7 && <4.8
+                     , hspec
+                     , QuickCheck
+                     , scotty
