--- a/giflib-api.cabal
+++ b/giflib-api.cabal
@@ -20,9 +20,14 @@ executable giflib-api
   main-is:             Main.hs
   other-extensions:    OverloadedStrings
   build-depends:       base ==4.*
-                     , text
-                     , scotty
                      , acid-state
+                     , aeson
+                     , containers
+                     , mtl
+                     , network-uri
+                     , safecopy
+                     , scotty
+                     , text
   default-language:    Haskell2010
   Ghc-options:         -Wall
                        -fwarn-tabs
@@ -39,5 +44,11 @@ Test-Suite hspec-tests
   build-depends:       base >=4.7 && <4.8
                      , hspec
                      , QuickCheck
-                     , scotty
                      , acid-state
+                     , aeson
+                     , containers
+                     , mtl
+                     , network-uri
+                     , safecopy
+                     , scotty
+                     , text
