--- a/giflib-api.cabal
+++ b/giflib-api.cabal
@@ -27,6 +27,7 @@ executable giflib-api
                      , safecopy
                      , scotty
                      , text
+                     , transformers
   default-language:    Haskell2010
   Ghc-options:         -Wall
                        -fwarn-tabs
@@ -51,3 +52,4 @@ Test-Suite hspec-tests
                      , safecopy
                      , scotty
                      , text
+                     , transformers
